--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ jdk:
 
 sudo: false
 
+branches:
+    only:
+        - master
+
 # https://docs.travis-ci.com/user/customizing-the-build#Skipping-the-Installation-Step
 install: true  # if we don't skip install, ./gradlew assemble is invoked, but this task is not available.
 
