disable maven sync

--- a/build.gradle
+++ b/build.gradle
@@ -129,11 +129,11 @@ bintray {
         gpg {
             sign = true
         }
-        mavenCentralSync {
-            sync = true
-            user = System.getenv('OSS_USER')
-            password = System.getenv('OSS_PW')
-        }
+//        mavenCentralSync {
+//            sync = true
+//            user = System.getenv('OSS_USER')
+//            password = System.getenv('OSS_PW')
+//        }
     }
 }
 
