--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ branches:
 
 script:
 - "./gradlew clean"
-- test "${TRAVIS_PULL_REQUEST}" == "false" || ./gradlew check
-- test "${TRAVIS_PULL_REQUEST}" != "false" || git checkout master; git remote set-url origin "https://$GITHUB_KEY@github.com/dustinliu/argparse4k"
-- test "${TRAVIS_PULL_REQUEST}" != "false" || test "${TRAVIS_BRANCH}" != "master" && ./gradlew clean test release jacocoTestReport
+- if [ "${TRAVIS_PULL_REQUEST}" != "false" ];then ./gradlew check;fi
+- if [ "${TRAVIS_PULL_REQUEST}" == "false" ];then git checkout master;git remote set-url origin "https://$GITHUB_KEY@github.com/dustinliu/argparse4k";fi
+- test "${TRAVIS_PULL_REQUEST}" != "false" || test "${TRAVIS_BRANCH}" != "master" || ./gradlew clean test release jacocoTestReport
 
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
