--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,13 @@ sudo: false
 branches:
   only:
   - master
+  - snapshot
 
 script:
-- "./gradlew clean"
-- if [ "${TRAVIS_PULL_REQUEST}" != "false" ];then ./gradlew check;fi
-- if [ "${TRAVIS_PULL_REQUEST}" == "false" ];then git checkout master;git remote set-url origin "https://$GITHUB_KEY@github.com/dustinliu/argparse4k";fi
-- test "${TRAVIS_PULL_REQUEST}" != "false" || test "${TRAVIS_BRANCH}" != "master" || ./gradlew clean test release jacocoTestReport
+- "./gradlew clean check"
+- ./gradlew jacocoTestReport
+- test "${TRAVIS_PULL_REQUEST}" != "false" || test "${TRAVIS_BRANCH}" != "master" || git checkout master;git remote set-url origin "https://$GITHUB_KEY@github.com/dustinliu/argparse4k"
+- test "${TRAVIS_PULL_REQUEST}" != "false" || test "${TRAVIS_BRANCH}" != "master" || ./gradlew release
 
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
