--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,7 @@ jacocoTestReport {
         xml.destination = file("${buildDir}/reports/jacoco/report.xml")
         csv.enabled false
         html.enabled true
-        html.destination "${buildDir}/reports/jacoco/html"
+        html.destination = file("${buildDir}/reports/jacoco/html")
     }
 }
 
